<resources>
    <string name="app_name">PTS Moodle</string>
    <string name="gcm_sender_id_with_ID">id:693343206985</string>
    <string name="gcm_sender_id">693343206985</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_not_registered">Not Registered? Click Here</string>
    <string name="label_login">LOGIN</string>
    <string name="label_register">REGISTER</string>
    <string name="error_incorrect_credentials">INCORRECT EMAIL/PASSWORD!</string>
    <string name="error_insufficient_credentials">PLEASE ENTER EMAIL/PASSWORD!</string>
    <string name="error_fill_details">ALL FIELDS ARE REQUIRED!</string>
    <string name="error_technical">SOME TECHNICAL ERROR OCCURRED \nTRY AGAIN LATER!</string>
    <string name="error_password_not_match">PASSWORDS DON\'T MATCH!</string>
    <string name="label_teacher">Teacher</string>
    <string name="label_student">Student</string>
    <string name="label_parent">Parent</string>
    <string name="tag_extra_details">EXTRA_DETAILS_OF</string>
    <string name="notification_user_selection_choice">To whom you want to send notification?</string>
    <string name="notification_title_note_uploaded">Notes Uploaded!!</string>
    <string name="notification_title_quiz_uploaded">Quiz Uploaded!!</string>
    <string name="notification_title_quiz_result">Quiz Result!!</string>
    <string name="notification_message_note_uploaded">Note has been uploaded for #SUBJECT# by #TEACHER#</string>
    <string name="notification_message_quiz_uploaded">Quiz(#NAME#) has been uploaded for #SUBJECT# by #TEACHER#</string>
    <string name="notification_message_quiz_result">Result of Quiz of #SUBJECT#:#MARKS# out of #TOTALMARKS#</string>
    <string name="dialog_message_quiz_result">You got #MARKS# out of #TOTALMARKS# with #CORRECT# correct answers.</string>
    <string-array name="notification_user_selection_list">
        <item>Parent</item>
        <item>Student</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
