<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="tk.only5.ptsmoodle.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:hint="Email Address">

                <EditText
                    android:id="@+id/etRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilRegisterEmail"
                android:hint="Password">

                <EditText
                    android:id="@+id/etRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilRegisterPassword"
                android:hint="Confirm Password">

                <EditText
                    android:id="@+id/etRegisterConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilRegisterConfirmPassword"
                android:hint="First Name">

                <EditText
                    android:id="@+id/etRegisterFName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilRegisterFName"
                android:hint="Last Name">

                <EditText
                    android:id="@+id/etRegisterLName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilRegisterLName"
                android:hint="Mobile">

                <EditText
                    android:id="@+id/etRegisterMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/rgExtraDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilRegisterMobile"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_parent" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/label_teacher" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/label_student" />
            </RadioGroup>

            <FrameLayout
                android:id="@+id/fragmentContainerExtraDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rgExtraDetails"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragmentContainerExtraDetails"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/label_register" />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
